2_platform/connection-checker.yaml
# this is used as part of kustomize deployments into kubernetes
# a file to merge configration into containers of deployments to add an init container that checks for a connection to a service before starting the main container
# uses nc to check a hostname and port for an amount of seconds which must be passed as environment variables
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __ignored__
spec:
  template:
    spec:
