2_platform/platform-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: platform
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*/*.platform.local"
        - "*/platform.local"
      tls:
        mode: SIMPLE
        credentialName: platform-tls
